[package]
name = "marbling"
version = "0.1.0"
edition = "2021"
description = "cryptocurrency wallets supports distributed key generation and MPC signing"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "marbling"
path = "marbling/main.rs"

[workspace]
members = [
    "structure"
]

[dependencies]
failure = { version = "0.1.8" }
clap = { version = "~2.33.1" }
colored = { version = "1.9" }

marbling-structure = { path = "./structure", version="0.0.1"}
