[package]
name = "aptoslabs"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/johndoe0x/marbling/tree/master/lib/aptoslabs"
description = "Library supports aptoslabs distributed key generation and signing"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
