[package]
name = "marbling-bitcoin"
version = "0.0.1"
edition = "2021"
description = "cryptocurrency wallet library supports bitcoin distributed key generation and signing"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
