[package]
name = "marbling-bitcoin"
version = "0.0.1"
edition = "2021"
description = "cryptocurrency wallet library supports distributed key generation and MPC signing for Bitcoin "
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0.136", default-features = false, features = ["alloc", "derive"] }
failure = { version = "0.1.8", default-features = false }