[package]
name = "marbling-ethereum-lib"
version = "0.0.0"
edition = "2021"
description = "cryptocurrency wallet library supports distributed key generation and MPC signing for Ethereum" 
license = "AGPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
